# sprite-shape

./: .justfile  Cargo.toml  README.md  flake.nix
assets/: config.toml  shader.glsl
assets/shaders/: wireframe.glsl
src/: glb.rs  lib.rs  main.rs  viewer.rs
