[package]
name = "geng-sprite-shape"
version = "0.1.0"
edition = "2021"

[dependencies]
geng.git = "https://github.com/geng-engine/geng"
geng-egui.git = "https://github.com/geng-engine/geng-egui"
serde = "1"
gltf = "1"

[patch.crates-io]
# https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" }
